--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,7 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$dark-gray: #4F4F4F;
+$mid-gray: #C4C4C4;
+$light-gray: #E0E0E0;
+
