--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,47 @@
-.navbar-lewagon {
+.navbar {
+  min-height: 6vh;
+  background-color: black;
+}
+
+.burger div{
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin: 5px;
+}
+
+.burger-links {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  text-decoration: none;
+  left: 0px;
+  position: absolute;
+  margin-top: 26vh;
+  padding-left: 5px;
   justify-content: space-between;
-  background: white;
-}
+  background-color: black;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in;
+  padding-bottom: 5px;
+  opacity: 70%;
+ }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+ .nav-link {
+  padding-top: 5px;
+  color: white;
+  opacity: 0%;
+ }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+ .nav-active {
+  transform: translateX(0%);
+ }
+
+@keyframes navLinkFade{
+  from{
+    opacity: 0%;
+  }
+  to{
+    opacity: 90%
+  }
 }
