--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,24 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <h1>Explore possibilities</h1>
+  <div class="search"></div>
+</div>
+<div class="types">
+  <div class="type--night type">
+    <h1>Night</h1>
+  </div>
+  <div class="type--sport type">
+    <h1>Sport</h1>
+  </div>
+  <div class="type--architecture type">
+    <h1>Architecture</h1>
+  </div>
+  <div class="type--portrait type">
+    <h1>Portrait</h1>
+  </div>
+  <div class="type--landscape type">
+    <h1>Landscape</h1>
+  </div>
+  <div class="type--videography type">
+    <h1>Videography</h1>
+  </div>
+</div>
