--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,18 +5,18 @@
       <div class="line2"></div>
       <div class="line3"></div>
     </div>
-    <ul class="burger-links">
+    <ul class="burger-dropdown">
       <li>
-        <a class="nav-link" href="#">Cameras</a>
+        <a class="burger-link" href="#">Cameras</a>
       </li>
       <li>
-        <a class="nav-link" href="#">Lenses</a>
+        <a class="burger-link" href="#">Lenses</a>
       </li>
       <li>
-        <a class="nav-link" href="#">Drones</a>
+        <a class="burger-link" href="#">Drones</a>
       </li>
       <li>
-        <a class="nav-link" href="#">Support Equipment</a>
+        <a class="burger-link" href="#">Support Equipment</a>
       </li>
     </ul>
 
@@ -30,16 +30,22 @@
             <%= link_to "Compare", "#", class: "nav-link-right" %>
           </li>
           <li class="nav-item">
-            <div class="burger2">
-              <div class="line1"></div>
-              <div class="line2"></div>
-              <div class="line3"></div>
+            <div class="avatar">
+              <h4>A</h4>
             </div>
-            <ul class="burger-links2">
-              <%= link_to "Messages", "#", class: "nav-link2" %>
-              <%= link_to "Wishlist", "#", class: "nav-link2" %>
-              <%= link_to "Account", "#", class: "nav-link2" %>
-              <%= link_to "Logout", "#", class: "nav-link2" %>
+            <ul class="avatar-dropdown">
+              <li>
+                <a class="avatar-link" href="#">Messages</a>
+              </li>
+              <li>
+                <a class="avatar-link" href="#">Wishlist</a>
+              </li>
+              <li>
+                <a class="avatar-link" href="#">Account</a>
+              </li>
+              <li>
+                <a class="avatar-link" href="#">Logout</a>
+              </li>
             </ul>
           </li>
         </ul>
