--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,16 +30,16 @@
             <%= link_to "Compare", "#", class: "nav-link-right" %>
           </li>
           <li class="nav-item">
-            <div class="burger2">
+            <div class="burger">
               <div class="line1"></div>
               <div class="line2"></div>
               <div class="line3"></div>
             </div>
-            <ul class="burger-links2">
-              <%= link_to "Messages", "#", class: "nav-link2" %>
-              <%= link_to "Wishlist", "#", class: "nav-link2" %>
-              <%= link_to "Account", "#", class: "nav-link2" %>
-              <%= link_to "Logout", "#", class: "nav-link2" %>
+            <ul class="burger-links">
+              <%= link_to "Messages", "#", class: "nav-link" %>
+              <%= link_to "Wishlist", "#", class: "nav-link" %>
+              <%= link_to "Account", "#", class: "nav-link" %>
+              <%= link_to "Logout", "#", class: "nav-link" %>
             </ul>
           </li>
         </ul>
