dropdowns left to do

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,11 @@
 .navbar {
-  min-height: 6vh;
+  height: 5vh;
   background-color: black;
-  width: 100%;
+  //width: 100%;
+  display: flex;
+}
+.burger {
+  cursor: pointer;
 }
 
 .burger div{
@@ -15,6 +19,7 @@
   height: 25px;
   width: 25px;
   color: white;
+  cursor: pointer;
 }
 
 .burger-dropdown {
@@ -24,7 +29,7 @@
   text-decoration: none;
   left: 0px;
   position: absolute;
-  margin-top: 26vh;
+  margin-top: 18vh;
   padding-left: 5px;
   justify-content: space-between;
   background-color: black;
@@ -41,7 +46,7 @@
   text-decoration: none;
   right: 0px;
   position: absolute;
-  margin-top: 1.8vh;
+  margin-top: 0.9vh;
   padding-right: 20px;
   justify-content: space-between;
   background-color: black;
@@ -55,6 +60,7 @@
   padding-top: 5px;
   color: white;
   opacity: 0%;
+  font-family: 'Poppins', 'sans-serif';
 }
 
 .avatar-link {
@@ -94,14 +100,22 @@ ul {
   text-decoration: none;
 }
 
-ul li {
-  float: left;
-  list-style: none;
-  text-decoration: none;
-}
-
 .nav-item {
   padding-right: 5px;
+  color: white;
+  opacity: 0.8;
+  font-family: 'Poppins', 'sans-serif';
+}
+.nav-item:hover {
+  text-decoration: none;
+  opacity: 1;
+  color: white;
+}
+
+.user {
+  display: flex;
+  justify-content: space-between;
+  width: 20%;
 }
 
 
