--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,48 +1,47 @@
-<nav>
-  <div class="navbar">
-    <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-    <ul class="burger-dropdown">
-      <li>
-        <a class="burger-link" href="#">Cameras</a>
-      </li>
-      <li>
-        <a class="burger-link" href="#">Lenses</a>
-      </li>
-      <li>
-        <a class="burger-link" href="#">Drones</a>
-      </li>
-      <li>
-        <a class="burger-link" href="#">Support Equipment</a>
-      </li>
-    </ul>
-
-    <div class="user">
-      <% if user_signed_in? %>
-          <%= link_to "Home", "#", class: "nav-item" %>
-          <%= link_to "Compare", "#", class: "nav-item" %>
-          <div class="nav-item">
-            <div class="avatar">
-              <h4>A</h4>
-            </div>
-            <ul class="avatar-dropdown">
-              <%= link_to "Messages", "#", class: "avatar-link" %>
-              <%= link_to "Wishlist", "#", class: "avatar-link" %>
-              <%= link_to "Account", "#", class: "avatar-link" %>
-              <%= link_to "Logout", "#", class: "avatar-link" %>
-            </ul>
-          </div>
-
-      <% else %>
-        <%= link_to "Login", new_user_session_path, class: "nav-link-right" %>
-      <% end %>
-    </div>
+<div class="navbar1">
+  <div class="burger">
+    <div class="line1"></div>
+    <div class="line2"></div>
+    <div class="line3"></div>
   </div>
+  <ul class="burger-dropdown">
+    <li>
+      <a class="burger-link" href="#">Cameras</a>
+    </li>
+    <li>
+      <a class="burger-link" href="#">Lenses</a>
+    </li>
+    <li>
+      <a class="burger-link" href="#">Drones</a>
+    </li>
+    <li>
+      <a class="burger-link" href="#">Support Equipment</a>
+    </li>
+  </ul>
 
 
-</nav>
+  <div class="user">
+    <% if user_signed_in? %>
+
+        <%= link_to "Home", "#", class: "nav-item" %>
+        <%= link_to "Compare", "#", class: "nav-item" %>
+        <div class="nav-item">
+          <div class="avatar">
+            <h4>A</h4>
+          </div>
+          <ul class="avatar-dropdown">
+            <%= link_to "Messages", "#", class: "avatar-link" %>
+            <%= link_to "Wishlist", "#", class: "avatar-link" %>
+            <%= link_to "Account", "#", class: "avatar-link" %>
+            <%= link_to "Logout", "#", class: "avatar-link" %>
+          </ul>
+        </div>
+
+    <% else %>
+      <%= link_to "Login", new_user_session_path, class: "nav-link-right" %>
+    <% end %>
+  </div>
+</div>
+
 
 
