--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,10 @@
-.navbar {
-  height: 5vh;
-  background-color: black;
-  //width: 100%;
-  display: flex;
-}
+// .navbar {
+//   height: 5vh;
+//   background-color: black;
+//   //width: 100%;
+//   display: flex;
+// }
+
 .burger {
   cursor: pointer;
 }
@@ -15,12 +16,12 @@
   margin: 5px;
 }
 
-.avatar {
-  height: 25px;
-  width: 25px;
-  color: white;
-  cursor: pointer;
-}
+// .avatar {
+//   height: 25px;
+//   width: 25px;
+//   color: white;
+//   cursor: pointer;
+// }
 
 .burger-dropdown {
   display: flex;
@@ -29,7 +30,7 @@
   text-decoration: none;
   left: 0px;
   position: absolute;
-  margin-top: 18vh;
+  margin-top: 25vh;
   padding-left: 5px;
   justify-content: space-between;
   background-color: black;
@@ -39,22 +40,22 @@
   opacity: 70%;
 }
 
-.avatar-dropdown {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  text-decoration: none;
-  right: 0px;
-  position: absolute;
-  margin-top: 0.9vh;
-  padding-right: 20px;
-  justify-content: space-between;
-  background-color: black;
-  transform: translateX(100%);
-  transition: transform 0.5s ease-in;
-  padding-bottom: 5px;
-  opacity: 70%;
-}
+// .avatar-dropdown {
+//   display: flex;
+//   flex-direction: column;
+//   list-style: none;
+//   text-decoration: none;
+//   right: 0px;
+//   position: absolute;
+//   margin-top: 0.9vh;
+//   padding-right: 20px;
+//   justify-content: space-between;
+//   background-color: black;
+//   transform: translateX(100%);
+//   transition: transform 0.5s ease-in;
+//   padding-bottom: 5px;
+//   opacity: 70%;
+// }
 
 .burger-link {
   padding-top: 5px;
@@ -63,19 +64,23 @@
   font-family: 'Poppins', 'sans-serif';
 }
 
-.avatar-link {
-  padding-top: 5px;
+.burger-link:hover {
   color: white;
-  opacity: 0%;
 }
+
+// .avatar-link {
+//   padding-top: 5px;
+//   color: white;
+//   opacity: 0%;
+// }
 
 .burger-active {
   transform: translateX(0%);
 }
 
-.avatar-active {
-  transform: translateX(0%);
-}
+// .avatar-active {
+//   transform: translateX(0%);
+// }
 
 @keyframes burgerLinkFade{
   from{
@@ -86,40 +91,80 @@
   }
 }
 
-@keyframes avatarLinkFade{
-  from{
-    opacity: 0%;
-  }
-  to{
-    opacity: 90%
-  }
-}
+// @keyframes avatarLinkFade{
+//   from{
+//     opacity: 0%;
+//   }
+//   to{
+//     opacity: 90%
+//   }
+// }
 
-ul {
-  list-style: none;
-  text-decoration: none;
-}
+// ul {
+//   list-style: none;
+//   text-decoration: none;
+// }
 
-.nav-item {
-  padding-right: 5px;
-  color: white;
-  opacity: 0.8;
-  font-family: 'Poppins', 'sans-serif';
-}
-.nav-item:hover {
-  text-decoration: none;
-  opacity: 1;
-  color: white;
-}
+// .nav-item {
+//   padding-right: 5px;
+//   color: white;
+//   opacity: 0.8;
+//   font-family: 'Poppins', 'sans-serif';
+// }
+// .nav-item:hover {
+//   text-decoration: none;
+//   opacity: 1;
+//   color: white;
+// }
 
-.user {
-  display: flex;
+// .user {
+//   display: flex;
+//   justify-content: space-between;
+//   width: 20%;
+// }
+
+.navbar-lewagon {
   justify-content: space-between;
-  width: 20%;
+  background: black;
+  height: 50px;
 }
 
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
 
+.navbar-lewagon .navbar-brand img {
+  width: 40px;
+}
 
+.navbar-links {
+  display: flex;
+  list-style: none;
+  color: white;
+  font-family: 'Poppins', 'sans-serif';
+  justify-content: space-between;
+}
 
+.dropdown-menu {
+  background-color: black;
+  color: white;
+  opacity: 70%;
+}
 
+.nav-link {
+  color: white;
+}
 
+.nav-link:hover {
+  color: white;
+  // font-size: 15px;
+}
+
+.dropdown-item {
+  color: white;
+}
+
+.content {
+  margin-top: 14px;
+  width: 350px
+}
