--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -67,12 +67,10 @@
   </div>
 </div>
 
-
-
 </nav> -->
 
 
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar1 navbar-expand-sm navbar-light navbar-lewagon">
   <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
@@ -93,9 +91,9 @@
       </li>
     </ul>
 
-  <button class="navbar-toggler"> <!-- type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> -->
+  <!-- <button class="navbar-toggler"> type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
 
 
   <div class="content"> <!-- id="navbarSupportedContent" -->
