--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,13 +9,14 @@
 
 .burger {
   cursor: pointer;
+  padding-left: 1.5vh;
 }
 
 .burger div{
-  width: 25px;
-  height: 3px;
+  width: 3.8vh;
+  height: 0.45vh;
   background-color: white;
-  margin: 5px;
+  margin: 0.76vh;
 }
 
 .burger-dropdown {
@@ -23,20 +24,20 @@
   flex-direction: column;
   list-style: none;
   text-decoration: none;
-  left: 0px;
+  left: 0vh;
   position: absolute;
   margin-top: 25vh;
-  padding-left: 5px;
+  padding-left: 0.76vh;
   justify-content: space-between;
   background-color: black;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in;
-  padding-bottom: 5px;
+  padding-bottom: 0.76vh;
   opacity: 70%;
 }
 
 .burger-link {
-  padding-top: 5px;
+  padding-top: 0.76vh;
   color: white;
   opacity: 0%;
   font-family: 'Poppins', 'sans-serif';
@@ -62,7 +63,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: black;
-  height: 50px;
+  height: 7.61vh;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -70,7 +71,7 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 6vh;
 }
 
 .navbar-links {
@@ -101,8 +102,12 @@
   color: white;
 }
 
+.nav-item {
+  padding-right: 1.5vh;
+}
+
 .content {
-  margin-top: 14px;
-  width: 350px
+  margin-top: 2.13vh;
+  width: 35vh;
 }
 
