--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,34 +1,50 @@
-<div class="row1">
-  <div class="column1">
-    <div class="product-img-div">
-      <h1>IMAGE</h1>
-      <br>
-      <h1><%= @product.name %></h1>
-    </div>
-    <div class="owner-info-div">
-      <h1>Owner Info</h1>
-    </div>
-    <div class="reviews-div">
-      <h1>Reviews</h1>
+<div class="show-page">
+  <div class="product-image-div">
+    <div class="product-picture-placeholder">
+      <!-- HERE IS A PICTURE MISSING -->
     </div>
   </div>
-  <div class="column2">
-    <div class="specs-div">
-      <h1>Specs</h1>
+  <div>
+    <div class="price">
+      <h6>€34/day</h6>
     </div>
-    <div class="details-div">
-      <h1>Details</h1>
-    </div>
-    <div class="policies-div">
-      <h1>Policies</h1>
-    </div>
-    <div class="recommendation-div">
-      <h1>Similar Products</h1>
+    <div class="info-booking-div">
+      <div class="info-div">
+        <div class="owner-picture-div">
+          <div class="owner-picture-placeholder">
+          <!-- HERE IS A PICTURE MISSING -->
+          </div>
+        </div>
+        <div class="owner-info">
+          <p>Michael Tung <br>
+            100% positive <br>
+            100% acceptance rate</p>
+        </div>
+      </div>
+      <div class="renting-div">
+        <button class="dates-button">Choose pick-up/return dates</button>
+        <button class="rent-button">Rent</button>
+      </div>
     </div>
   </div>
-  <div class="column3">
-    <div class="payment-div">
-      <h1>PAYMENT & BOOKING DETAILS</h1>
-    </div>
+  <div class="product-details">
+    <p class="specs" id="specs_header">Specs</p>
+    <div class="line1"></div>
+    <p class="products-specs" id="specs_text">This are the products specs. This are the products specs.<br>
+      This are the products specs. This are the products specs.<br>
+      This are the products specs.This are the products specs.</p>
+    <p class="details">Details</p>
+    <div class="line2"></div>
+    <p class="products-details">This are the products details. This are the products details.<br>
+      This are the products details. This are the products details.<br>
+      This are the products details.This are the products details.</p>
+    <p class="policy">General Policy</p>
+    <div class="line3"></div>
+    <p class="products-policy">General Policy. General Policy. General Policy. <br>
+      General Policy. General Policy. General Policy. <br>
+    General Policy. General Policy. General Policy. </p>
   </div>
 </div>
+
+
+
