--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
-.navbar1 {
+.navbar {
   height: 5vh;
   background-color: black;
-  width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -17,55 +16,53 @@
 }
 
 .avatar {
-  height: 25px;
-  width: 25px;
+  // height: 25px;
+  // width: 25px;
   color: white;
   cursor: pointer;
 }
 
 .burger-dropdown {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   list-style: none;
   text-decoration: none;
-  left: 0px;
-  position: absolute;
-  margin-top: 18vh;
-  padding-left: 5px;
-  justify-content: space-between;
+  // left: 0px;
+  // position: absolute;
+  // margin-top: 18vh;
+  // padding-left: 5px;
+  // justify-content: space-between;
   background-color: black;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in;
-  padding-bottom: 5px;
+  // padding-bottom: 5px;
   opacity: 70%;
 }
 
 .avatar-dropdown {
-  display: flex;
-  flex-direction: column;
+  display: block;
   list-style: none;
   text-decoration: none;
-  right: 0px;
-  position: absolute;
-  margin-top: 0.9vh;
-  padding-right: 20px;
-  justify-content: space-between;
+  // right: 0px;
+  // position: absolute;
+  // margin-top: 0.9vh;
+  // padding-right: 20px;
   background-color: black;
   transform: translateX(100%);
   transition: transform 0.5s ease-in;
-  padding-bottom: 5px;
+  // padding-bottom: 5px;
   opacity: 70%;
 }
 
 .burger-link {
-  padding-top: 5px;
+  // padding-top: 5px;
   color: white;
   opacity: 0%;
   font-family: 'Poppins', 'sans-serif';
 }
 
 .avatar-link {
-  padding-top: 5px;
+  // padding-top: 5px;
   color: white;
   opacity: 0%;
 }
@@ -102,7 +99,7 @@ ul {
 }
 
 .nav-item {
-  padding-right: 5px;
+  // padding-right: 5px;
   color: white;
   opacity: 0.8;
   font-family: 'Poppins', 'sans-serif';
@@ -115,8 +112,8 @@ ul {
 
 .user {
   display: flex;
-  justify-content: space-between;
-  width: 20%;
+  // justify-content: space-between;
+  // width: 20%;
 }
 
 
