--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -57,3 +57,7 @@
 .type--videography {
   //background-image: url("https://res.cloudinary.com/dq5tsbkvy/image/upload/v1610814578/landing%20page%20black%20and%20white/videography_hmgdhp.jpg");
 }
+
+h2 {
+
+}
