--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,7 +27,7 @@
       <p><%= product.name %></p>
       <p><%= product.price_per_day %>€/day</p>
       <p> <%= product.user.first_name %> <%= product.user.last_name %></p>
-      <button><%= link_to product.name, product_path(product) %></button>
+      <button><%= link_to @product.name, product_path(product) %></button>
     <div class="card-product">
       <div class="product-photo"><h1>Photos</h1></div>
       <div class="product-information">
