Revert "Bookigs seeds"

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,10 @@
-<!-- <div class="banner">
+<div class="banner">
   <h1>Explore possibilities</h1>
   <div class="search"></div>
-</div> -->
+</div>
 <div class="types">
-  <div class="type">
-    <div class="type__top type--night">
-      <h1>Night</h1>
-      <p>Night photography immediately solves a huge problem that you confront constantly in photography. That problem is being faced with ordinary scenes that just aren’t very interesting. If you take a picture of a building or a standard street scene during the day, it can be sort of dull. We are all used to seeing shots taken in the middle of the day. That same scene – shot at night – can be a really interesting photograph though.</p>
-    </div>
-    <div class="type__bottom">
-      <div class="type__bottom__products">
-        <h1>Cameras</h1>
-        <div class="type__bottom__cards">
-          <div class="type__bottom__card"></div>
-          <div class="type__bottom__card"></div>
-        </div>
-      </div>
-      <div class="type__bottom__products">
-        <h1>Lenses</h1>
-        <div class="type__bottom__cards">
-
-        </div>
-      </div>
-    </div>
+  <div class="type--night type">
+    <h1>Night</h1>
   </div>
   <div class="type--sport type">
     <h1>Sport</h1>
