--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,21 @@
+<script src="https://kit.fontawesome.com/5a3dd8d652.js" crossorigin="anonymous"></script>
 <div class="show-page">
-  <div class="product-image-div">
-    <div class="product-picture-placeholder">
-      <!-- HERE IS A PICTURE MISSING -->
+  <div class="upper-div">
+    <div class="carousel-container">
+      <div class="carousel-slide-box">
+      <i class="fas fa-angle-left" id="prevBtn"></i>
+      <i class="fas fa-angle-right" id="nextBtn"></i>
+      <div class="carousel-slide">
+        <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/v1611673164/camera_klein3_ooomrr.jpg" id="lastClone" alt="">
+        <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/v1611673164/camera_klein1_og3l77.jpg" alt="">
+        <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/v1611673164/camera_klein2_tolanq.jpg" alt="">
+        <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/v1611673164/camera_klein3_ooomrr.jpg" alt="">
+        <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/v1611673164/camera_klein1_og3l77.jpg" id="firstClone" alt="">
+      </div>
+      </div>
     </div>
   </div>
+
   <div>
     <div class="price">
       <h6>€34/day</h6>
@@ -27,22 +39,37 @@
       </div>
     </div>
   </div>
+
   <div class="product-details">
     <p class="specs" id="specs_header">Specs</p>
+    <!-- <div class="icon-container1">
+    <i class="fas fa-angle-down arrow1"></i>
+    </div> -->
     <div class="line1"></div>
     <p class="products-specs" id="specs_text">This are the products specs. This are the products specs.<br>
       This are the products specs. This are the products specs.<br>
-      This are the products specs.This are the products specs.</p>
+      This are the products specs.This are the products specs.
+    </p>
+
     <p class="details">Details</p>
+    <!-- <div class="">
+    <i class="fas fa-angle-down arrow2"></i>
+    </div> -->
     <div class="line2"></div>
     <p class="products-details">This are the products details. This are the products details.<br>
       This are the products details. This are the products details.<br>
-      This are the products details.This are the products details.</p>
+      This are the products details.This are the products details.
+    </p>
+
     <p class="policy">General Policy</p>
+    <!-- <div class="arrow-icon3">
+    <i class="fas fa-angle-down arrow3"></i>
+    </div> -->
     <div class="line3"></div>
     <p class="products-policy">General Policy. General Policy. General Policy. <br>
       General Policy. General Policy. General Policy. <br>
-    General Policy. General Policy. General Policy. </p>
+      General Policy. General Policy. General Policy.
+    </p>
   </div>
 </div>
 
