--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,9 +42,9 @@
 
   <div class="product-details">
     <p class="specs" id="specs_header">Specs</p>
-    <!-- <div class="icon-container1">
+    <div class="icon-container1">
     <i class="fas fa-angle-down arrow1"></i>
-    </div> -->
+    </div>
     <div class="line1"></div>
     <p class="products-specs" id="specs_text">This are the products specs. This are the products specs.<br>
       This are the products specs. This are the products specs.<br>
@@ -52,9 +52,9 @@
     </p>
 
     <p class="details">Details</p>
-    <!-- <div class="">
+    <div class="icon-container2">
     <i class="fas fa-angle-down arrow2"></i>
-    </div> -->
+    </div>
     <div class="line2"></div>
     <p class="products-details">This are the products details. This are the products details.<br>
       This are the products details. This are the products details.<br>
@@ -62,9 +62,9 @@
     </p>
 
     <p class="policy">General Policy</p>
-    <!-- <div class="arrow-icon3">
+    <div class="icon-container3">
     <i class="fas fa-angle-down arrow3"></i>
-    </div> -->
+    </div>
     <div class="line3"></div>
     <p class="products-policy">General Policy. General Policy. General Policy. <br>
       General Policy. General Policy. General Policy. <br>
